| Bug #26634 | Valgrind failure in tree: memory loss for memory allocated in rpl_utility.h | ||
|---|---|---|---|
| Submitted: | 26 Feb 2007 13:02 | Modified: | 9 Mar 2007 15:47 |
| Reporter: | Mats Kindahl | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Row Based Replication ( RBR ) | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | |
| Assigned to: | Mats Kindahl | CPU Architecture: | Any |
[26 Feb 2007 13:02]
Mats Kindahl
[26 Feb 2007 14:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/20572 ChangeSet@1.2460, 2007-02-26 15:16:48+01:00, mats@romeo.(none) +4 -0 BUG#26634 (Valgrind failure in tree: memory loss for memory allocated in rpl_utility.h): Adding code to release allocated memory when tables_to_lock list is cleared.
[26 Feb 2007 16:45]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/20581 ChangeSet@1.2460, 2007-02-26 17:44:55+01:00, mats@romeo.(none) +4 -0 BUG#26634 (Valgrind failure in tree: memory loss for memory allocated in rpl_utility.h): Adding code to release allocated memory when tables_to_lock list is cleared.
[9 Mar 2007 15:47]
MC Brown
No changelog entry required.
