BUG#26634 (Valgrind failure in tree: memory loss for memory allocated in rpl_utility.h): Adding code to release allocated memory when tables_to_lock list is cleared.

sql/log_event.cc:
  Using RPL_TABLE_LIST instead of TABLE_LIST for tables_to_lock.
sql/rpl_rli.cc:
  Moving st_relay_log_info::clear_tables_to_lock() into rpl_rli.cc.
  Adding code to release memory allocated for saved table definition.
sql/rpl_rli.h:
  Moving st_relay_log_info::clear_tables_to_lock() into rpl_rli.cc.
  Using RPL_TABLE_LIST instead of TABLE_LIST for tables_to_lock.
sql/rpl_utility.h:
  Adding forward declarations.
  Adding boolean to tell if tabledef is valid.